@@ -231,6 +231,7 @@
                         ${surefire.jacoco.args}
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.base=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.bg=ALL-UNNAMED
+                        --add-opens com.swardana.nayanika/com.swardana.nayanika.gui=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
